--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
 	<div class="naranja">
-	    <div class="morado">
+	    <div class="morado"></div>
 	       <div class="amarillo"></div>
-	    </div>
 	</div>
 </body>
 </html>
